--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,18 @@
 plugins {
 	id 'java'
-	id 'org.flywaydb.flyway' version '10.0.0'
-	id 'org.springframework.boot' version '3.4.1'
+	id 'org.flywaydb.flyway' version '11.3.0'
+	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
 group = 'pl.mfconsulting.java'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '21'
+
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
 
 configurations {
 	compileOnly {
@@ -24,24 +29,30 @@ repositories {
 dependencies {
 	implementation ('org.springframework.boot:spring-boot-starter-data-jpa',
 	"org.springframework.boot:spring-boot-starter-validation")
-	implementation ("org.springframework.boot:spring-boot-starter-web"){
-        exclude module: "spring-boot-starter-tomcat"
-    }
+
+	implementation('org.springframework.boot:spring-boot-starter-web'){
+		exclude group:'org.springframework.boot', module:'spring-boot-starter-tomcat'
+	}
+	implementation 'org.springframework.boot:spring-boot-starter-undertow'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.19.1'
+
+
 	//H2
 	runtimeOnly 'com.h2database:h2'
 	
-	implementation group: 'org.flywaydb', name: 'flyway-core', version: '10.0.0'
+	implementation group: 'org.flywaydb', name: 'flyway-core', version: '11.3.0'
 
 
-	testImplementation('org.springframework.boot:spring-boot-starter-test',
-	  'org.junit.jupiter:junit-jupiter')
+//	testImplementation('org.springframework.boot:spring-boot-starter-test',
+//	  'org.junit.jupiter:junit-jupiter')
 
-	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.11'
 
 	//H2
     // testImplementation 'com.h2database:h2'
